--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ dependencies = [
     "matplotlib (>=3.10.1,<3.11.0)"
 ]
 
+packages = [
+    { include = "fieldpy", from = "src" },
+]
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
