--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,11 @@ packages = [
     { include = "fieldpy", from = "src" },
 ]
 
+classifiers = [
+    "Operating System :: OS Independent",
+    "Topic :: Software Development :: Libraries :: Python Modules",
+]
+
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
