--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,8 @@ version = "0.1.0"
 description = "A lightweight Python library to support aggregate computing!"
 license = "Apache-2.0"
 authors = [
-    {name = "Davide Domini",email = "davide.domini@unibo.it"},
-    {name = "Gianluca Aguzzi",email = "gianluca.aguzzi@unibo.it"}
+    {name = "Davide Domini", email = "davide.domini@unibo.it"},
+    {name = "Gianluca Aguzzi", email = "gianluca.aguzzi@unibo.it"}
 ]
 readme = "README.md"
 requires-python = ">=3.13"
@@ -26,3 +26,8 @@ classifiers = [
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.0.0"
+pylint = "^3.0.0"
+ruff = "^0.3.0"
