--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ build-backend = "poetry.core.masonry.api"
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.0"
 pylint = "^3.0.0"
+pytest-cov = "^3.0.0"
 ruff = "^0.3.0"
 flake8 = "^7.0.0"
 
