--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,17 +1,19 @@
-[project]
+[tool.poetry]
 name = "phyelds"
 version = "0.1.0"
 description = "A lightweight Python library to support aggregate computing!"
 license = "Apache-2.0"
 authors = [
-    {name = "Davide Domini", email = "davide.domini@unibo.it"},
-    {name = "Gianluca Aguzzi", email = "gianluca.aguzzi@unibo.it"}
+  "Davide Domini <davide.domini@unibo.it>",
+  "Gianluca Aguzzi <gianluca.aguzzi@unibo.it>"
 ]
+homepage = "https://github.com/phyelds/phyelds"
+repository = "https://github.com/phyelds/phyelds"
+
 readme = "README.md"
-requires-python = ">=3.13"
-dependencies = [
-    "wrapt (>=1.17.2,<1.18.0)",
-    "matplotlib (>=3.10.1,<3.11.0)"
+
+include = [
+    "LICENSE",
 ]
 
 packages = [
@@ -23,12 +25,20 @@ classifiers = [
     "Topic :: Software Development :: Libraries :: Python Modules",
 ]
 
+[tool.poetry.urls]
+"Changelog" = "https://github.com/phyelds/phyelds/blob/master/CHANGELOG.md"
+
 [tool.pytest.ini_options]
 testpaths = ["src/tests"]
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.dependencies]
+python = "^3.13"
+wrapt = ">=1.17.2,<1.18.0"
+matplotlib = ">=3.10.1,<3.11.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.0"
