ci: add linting checks also with flake8

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,5 +38,9 @@ jobs:
       run: |
         poetry run pylint src
 
+    - name: Lint with flake8
+      run: |
+        poetry run flake8
+
     - name: Test with pytest
       run: poetry run pytest
