--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ build-backend = "poetry.core.masonry.api"
 python = "^3.13"
 wrapt = ">=1.17.2,<1.18.0"
 matplotlib = ">=3.10.1,<3.11.0"
+pre-commit = "^4.2.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.0"
