--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ python = "^3.13"
 wrapt = ">=1.17.2,<1.18.0"
 matplotlib = ">=3.10.1,<3.11.0"
 pre-commit = "^4.2.0"
+pandas = "^2.2.3"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.0"
@@ -47,4 +48,3 @@ pylint = "^3.0.0"
 pytest-cov = "^3.0.0"
 ruff = "^0.3.0"
 flake8 = "^7.0.0"
-
