--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ wrapt = ">=1.17.2,<1.18.0"
 matplotlib = ">=3.10.1,<3.11.0"
 pre-commit = "^4.2.0"
 pandas = "^2.2.3"
+pydantic = "2.12.5"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.0"
